--- a/VGCatalog/VGCatalog.csproj
+++ b/VGCatalog/VGCatalog.csproj
@@ -87,6 +87,12 @@
   <ItemGroup>
     <None Include="Resources\book--minus.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\disk.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\arrow-circle-double-135.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
