Added Sega Genesis icon, added export all functionality

--- a/VGCatalog/VGCatalog.csproj
+++ b/VGCatalog/VGCatalog.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Resources\genesis.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -92,6 +95,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\document-excel1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Genesis.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\genesis.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
